# mmt-py

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  README.md  babel.cfg  pyproject.toml  pytest.ini  requirements.txt  requirements_production.txt  wsgi.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/assets/: base.css  index.css  main.css  variables.css
frontend/src/assets/components/: card.css  icon-button.css  icon.css  logout-button.css  primary-nav.css  site-header.css  tray.css
frontend/src/assets/objects/: container.css  grid.css
frontend/src/components/: CurrentUpload.vue  DownloadsTable.vue  ProgressBar.vue  SiteHeader.vue  UploadQueue.vue  UploadTray.vue  UploadsTable.vue  UserProfile.vue  UsersTable.vue
frontend/src/helpers/: add-file.ts
frontend/src/icons/: DownloadIcon.vue
frontend/src/locales/: de.ts  en.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  queue.ts
frontend/src/views/: AdminView.vue  DownloadsView.vue  ProfileView.vue  UploadsView.vue
mmt_backend/: __init__.py  admin.py  auth.py  db.py  db2.py  default_config.py  downloads.py  filesystem.py  mail.py  schema.sql  uploads.py
mmt_backend/templates/mail/: file_uploaded_admin.txt  file_uploaded_user.txt  new_user.txt  test_mail.txt  user_activated.txt
nginx/: mmt-py
supervisor/: mmt-py.conf
tests/: add_data.py  conftest.py  data.sql  test_admin.py  test_auth.py  test_db.py  test_factory.py  test_uploads.py
tests/acceptance/: test_pages.py
(+8 files in other folders)
